# glasswing-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  GLASSWING_SPEC.md  LICENSE  README.md  alembic.ini  pyproject.toml  run_tests.js  verify_frameworks.js  verify_schemas.js  verify_schemas.py
.claude/: launch.json
.github/workflows/: ci.yml
agents/: audit_trail.py  control_prescription.py  onboarding_intake.py  portfolio_manager.py  risk_classifier.py
docs/: architecture.md  framework_authoring_guide.md  kaggle_writeup.md  live_runs.md  pilot_acquisition_sequence.md  teardown_methodology.md  yc_application_strategy.md
glasswing/: __init__.py
glasswing/agents/: __init__.py  base.py  evidence_extraction.py
glasswing/cli/: __init__.py  app.py
glasswing/console/: __init__.py
glasswing/core/: __init__.py  approval.py  audit.py  controls.py  engagement.py  evidence.py  extracted_evidence.py  initiative.py  lifecycle.py  ll144.py  report.py  risk.py  run_ledger.py
glasswing/engines/: __init__.py  classification.py  questionnaire.py
glasswing/intake/: __init__.py  extraction_runner.py  questionnaire_runner.py
glasswing/mcp/: __init__.py
glasswing/monitoring/: __init__.py
glasswing/reporting/: __init__.py
glasswing/services/: __init__.py  audit.py  portfolio.py
glasswing/storage/: __init__.py  database.py  models.py
glasswing/storage/migrations/: env.py
mcp_server/: server.py
mcp_server/frameworks/: colorado_admt.json  colorado_sb_205.json  eu_ai_act.json  iso_42001.json  nist_ai_rmf.json  nyc_ll144.json
orchestration/: flow.py
prompts/: audit_trail.md  control_prescription.md  onboarding_intake.md  portfolio_manager.md  risk_classifier.md
prompts/extraction/: v1.md
schemas/: __init__.py  audit_log.py  control_prescription.py  governance_manifest.py  initiative.py  portfolio_state.py  risk_profile.py
security/: adversarial_test.py  audit_replay.py
skills/ai_risk_tier_classification/: SKILL.md  __main__.py
skills/ai_risk_tier_classification/examples/: example_ambiguous_hiring.json  example_high_risk_loan.json  example_limited_risk_chatbot.json  example_low_risk_marketing.json
skills/ai_risk_tier_classification/scripts/: classifier.py
tests/: conftest.py  test_end_to_end.py  test_end_to_end_full.py  test_flow.py  test_mcp_server.py  test_schemas.py  test_skill.py  test_skills.py
tests/fixtures/evidence_extraction/: NOTES.md  low_confidence.response.json  malformed.response.json  model_card_lending.md  model_card_lending.response.json
tests/fixtures/questionnaires/: sample_answers.yaml  sample_answers_chatbot.yaml  sample_answers_invalid.yaml  sample_intake_v0.yaml
tests/glasswing/: conftest.py  test_agent_boundary.py  test_agents_base.py  test_audit.py  test_cli.py  test_cli_questionnaire.py  test_evidence_extraction_agent.py  test_extraction_runner.py  test_migrations.py  test_portfolio.py  test_questionnaire_engine.py  test_questionnaire_runner.py  test_tamper_tool.py
tests/golden/: test_golden_fixtures.py  test_per_framework_results.py  test_r5_nist_precedence.py  test_v0_1_parity.py
tests/golden/fixtures/: 01_high_risk_credit_lendfast.expected.json  01_high_risk_credit_lendfast.input_initiative.json  02_high_risk_recruitment_ambiguous.expected.json  02_high_risk_recruitment_ambiguous.input_initiative.json  03_limited_risk_chatbot.expected.json  03_limited_risk_chatbot.input_initiative.json  04_minimal_risk_marketing.expected.json  04_minimal_risk_marketing.input_initiative.json  05_prohibited_social_scoring.expected.json  05_prohibited_social_scoring.input_initiative.json  (+12 more)
tests/tools/: tamper.py  week2_freeze_v0_1_parity.py
ui/: app.py
(+12 files in other folders)
